--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.9.0",
         "bootstrap": "4.3.1",
+        "eslint": "^6.1.0",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
         "magnific-popup": "^1.1.0"
