--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ $RECYCLE.BIN/
 # Mac desktop service store files
 .DS_Store
 cinema/.vs/cinema/v16/Server/sqlite3/db.lock
+frontend/node_modules/
