Add Gulp as task runner and define first tasks. Use dist folder as the main place to fetch js, css and images.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,14 +39,18 @@
     "devDependencies": {
         "browser-sync": "2.26.7",
         "del": "4.1.1",
-        "gulp": "4.0.2",
+        "gulp": "^4.0.2",
         "gulp-autoprefixer": "6.1.0",
         "gulp-clean-css": "4.2.0",
+        "gulp-concat": "^2.6.1",
+        "gulp-copy": "^4.0.1",
         "gulp-header": "2.0.7",
+        "gulp-notify": "^3.2.0",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
-        "gulp-uglify": "3.0.2",
+        "gulp-sourcemaps": "^2.6.5",
+        "gulp-uglify": "^3.0.2",
         "merge-stream": "2.0.0"
     }
 }
