--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,9 @@
     "name": "startbootstrap-freelancer",
     "version": "5.1.2",
     "scripts": {
-        "start": "node_modules/.bin/gulp watch"
+        "server": "http-server ./public",
+        "build": "gulp build",
+        "watch": "gulp watch"
     },
     "description": "A freelancer portfolio HTML theme for Bootstrap.",
     "keywords": [
@@ -49,6 +51,7 @@
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "1.4.0",
         "gulp-sass": "4.0.2",
+        "gulp-serve": "^1.4.0",
         "gulp-sourcemaps": "^2.6.5",
         "gulp-uglify": "^3.0.2",
         "merge-stream": "2.0.0"
