Add ngDialog. Use only MoviesCtrl. For movie details use MovieDetailsController.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,8 @@
         "eslint": "^6.1.0",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
-        "magnific-popup": "^1.1.0"
+        "magnific-popup": "^1.1.0",
+        "ng-dialog": "^1.4.0"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
