--- a/cinema/cinema/web.config
+++ b/cinema/cinema/web.config
@@ -2,6 +2,7 @@
 <configuration>
     <system.webServer>
         <directoryBrowse enabled="true" />
+        <validation validateIntegratedModeConfiguration="false"/>
     </system.webServer>
     <system.web>
         <identity impersonate="true" />
