--- a/cinema/Cinema.Services/Cinema.Services.csproj
+++ b/cinema/Cinema.Services/Cinema.Services.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
+    <PackageReference Include="System.Linq.Parallel" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
